Updated Acheivements section

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 
     <title>Rohith's Portfolio</title>
 
-    <!-- Favicon -->
-    <link rel="icon" href="assets/favicon.svg" type="image/svg+xml" />
+    <link rel="icon" href="https://freepngimg.com/download/letter/130429-r-letter-free-transparent-image-hd.png" />
 
     <!-- CSS Files -->
     <link rel="stylesheet" href="css/common.css" />
